--- a/Alt Designs/Hybrid 2/css.css
+++ b/Alt Designs/Hybrid 2/css.css
@@ -1,4 +1,329 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600');
+/*STRIPE*/
+/**/
+/**/
+/*LOADER*/
+.sk-cube-grid {
+  width: 40px;
+  height: 40px;
+  margin: 100px auto;
+}
+
+.sk-cube-grid .sk-cube {
+  width: 33%;
+  height: 33%;
+  background-color: #50aaed;
+  float: left;
+  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+}
+.sk-cube-grid .sk-cube1 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube2 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube3 {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s; }
+.sk-cube-grid .sk-cube4 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube5 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube6 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube7 {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s; }
+.sk-cube-grid .sk-cube8 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube9 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  }
+}
+
+@keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  }
+}
+/**/
+#payment-load-animation *{
+  opacity: 1 !important;
+}
+#payment-load-animation #secure-payment-img{
+  left: 9%;
+  top: -100px;
+}
+#thanks-for-choosing{
+  font-size: 1.1rem;
+  margin: 5px;
+}
+#loading-payment{
+  position: relative;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: white;
+  z-index: 5000;
+  justify-content: center;
+  align-items: center;
+}
+#payment-load-animation p{
+  font-weight: 400;
+  position: absolute;
+  color: #50aaed;
+  left: 20%;
+  margin: 65px 0 0 0;
+}
+#payment-load-animation{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 250px;
+  height: 250px;
+  /*background: rgba(0,0,0, .1);*/
+  z-index: 5;
+}
+#payment-form-stripe span{
+  color:  #50aaed;
+}
+#payment-form-stripe:hover{
+  opacity: 1;
+}
+#payment-form-stripe{
+  transition: all .4s;
+  opacity: .6;
+  font-style: italic;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  font-size: .8rem;
+  color: black;
+}
+#payment-headline{
+  padding: 10px;
+  font-size: 1.2rem;
+  position: absolute;
+  top: 20px;
+  color: black;
+}
+#payment-confirm{
+  color: #50aaed;
+  font-weight: 400;
+}
+#type-confirm{
+  color: #50aaed;
+  font-weight: 400;
+}
+#payment-form-exit:hover{
+  background: #50aaed;
+  color: white;
+}
+#payment-form-exit{
+  transition: all .4s;
+  border-radius: 3px;
+  color: #50aaed;
+  font-weight: 400;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  padding: 3px 10px 5px 10px;
+  background: white;
+}
+#payment-form{
+  position: absolute;
+  width: 100%;
+  margin: -20px 0 0 0;
+}
+#secure-payment-img-in{
+  width: 50px;
+}
+#secure-payment-img{
+  opacity: .6;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+}
+#stripe-form-shade{
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0, .5);
+  height: 100%;
+  width: 100%;
+}
+#stripe-form{
+  z-index: 4000;
+  position: fixed;
+  width: 94%;
+  border-radius: 5px;
+  border: 2px solid #50aaed;
+  left: 3%;
+  top: 25%;
+  height: 300px;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+#payment-form button:hover{
+  color:  #50aaed;
+  background: white;
+}
+#payment-form button{
+  transition: all .4s;
+  margin: 10px;
+  padding: 10px 15px;
+  border: 2px solid #50aaed;
+  background:  #50aaed;
+  color: white;
+}
+
+.StripeElement {
+  background-color: white;
+  padding: 8px 12px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
+
+.cf-input p{
+    margin: -2px 0 0 0;
+}
+
+.admin-color-control{
+    display:none;
+}
+
+.popup-confirm-section{
+  position: fixed;
+  top:0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0,0,0, .7);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#pop-confirm-wrap-p{
+  padding: 10px;
+  margin: -40px 0 0 0;
+  font-size: 1rem;
+}
+.pop-confirm-wrap{
+  position: absolute;
+  top: 20%;
+  left: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 70%;
+  height: 60vh;
+  background: white;
+  z-index: 15;
+  border-radius: 5px;
+}
+#blue-check-mark{
+  transition: all .6s;
+  opacity: 0;
+  position: absolute;
+  top: 55%;
+  left: 45%;
+  width: 80px;
+}
+.pop-confirm-info p{
+  padding: 10px;
+}
+.pop-confirm-btns{
+  display: flex;
+  width: 100%;
+  margin: 70px 0 0 0;
+}
+.cont-edit:hover{
+  font-size: 1rem;
+  background: white;
+  color: black;
+}
+.cont-edit{
+  position: absolute;
+  transition: all .4s;
+  padding: 5px 15px;
+  border: 1px solid rgba(0,0,0, .5);
+  border-radius: 3px;
+  margin: 1.9% 0 0 -5.5% ;
+  background: black;
+  color: white;
+}
+.vid-btn:hover{
+  background: white;
+  color: #50aaed;
+}
+.vid-btn{
+  margin:10px auto 40px;
+  transition: all .4s;
+  width: 35%;
+  text-align: center;
+  color: white;
+  font-size: 1.2rem;
+  border: 2px solid #50aaed;
+  border-radius: 3px;
+  padding: 10px 25px;
+  background: #50aaed;
+}
+.pop-confirm-info h4{
+  font-size: 2rem;
+}
+.pop-confirm-info{
+  padding: 10px;
+}
 .cf-input p{
     margin: -2px 0 0 0;
 }
@@ -304,14 +629,14 @@ h1{
 }
 .color-single{
   transition: all .4s;
-  position: relative;
-  display: flex;
-  align-items: center;
-  margin: 20px 2% 0 2%;
-  width: 45%;
-  height: 25px;
-  border-radius: 3px;
-  border: 1px solid rgba(0,0,0, .5);
+      position: relative;
+      display: flex;
+      align-items: center;
+      margin: 1px 2% 0 2%;
+      width: 45%;
+      height: 25px;
+      border-radius: 3px;
+      border: 1px solid rgba(0,0,0, .5);
 }
 .color-single h4{
   position: absolute;
@@ -458,7 +783,7 @@ font-size: 1.3rem;
 .color-single-dropdown{
   width: 90%;
   z-index: 8;
-  margin: 3px;
+  margin: 0px;
 }
 .picker-dropdown-p{
   margin: 5px !important;
@@ -508,9 +833,11 @@ font-size: 1.3rem;
 }
 #down-chevron{
   min-width: 10px;
+  max-width: 10px;
   margin: 0 0 0 20%;
 }
 #front-suit-display{
+  margin: 60px 0 0 0;
   justify-content: flex-end;
   align-items: flex-end;
 }
@@ -530,99 +857,153 @@ font-size: 1.3rem;
 #front-pipeing{
   z-index: 2;
   position: absolute;
-  width: 41%;
-  left: 68px;
+  width: 71.2%;
+  left: 31px;
   top: 31px;
 }
 #fc{
   position: absolute;
-  width: 21%;
-  left: 101px;
-  top: 13px;
+  width: 18.8%;
+  left: 100px;
+  top: 11px;
 }
 #frla{
   position: absolute;
-  width: 20%;
-  left: 12px;
-  top: 137px;
-}
-#frs{
-  position: absolute;
-  width: 10.6%;
-  left: 40px;
-  top: 65px;
-}
-#frside{
-  position: absolute;
-  width: 19.7%;
-  left: 54px;
-  top: 33px;
-}
-#frc{
-  position: absolute;
-  width: 24.2%;
-  left: 50px;
-  top: 37px;
-}
-#flc{
-  position: absolute;
-  width: 35.3%;
-  left: 96px;
-  top: 31px;
-}
-#flside{
-  position: absolute;
-  width: 18.5%;
-  left: 145px;
-  top: 22px;
-}
-#fls{
-  position: absolute;
-  width: 13%;
-  left: 165px;
-  top: 45px;
+  width: 16.9%;
+  left: 10px;
+  top: 158px;
 }
 #flla{
   position: absolute;
-  width: 14%;
+  width: 24.8%;
+  left: 147px;
+  top: 166px;
+}
+#frua{
+  position: absolute;
+  width: 11.4%;
+  left: 37px;
+  top: 74px;
+}
+#flua{
+  position: absolute;
+  width: 16.6%;
+  left: 166px;
+  top: 43px;
+}
+#fre{
+  position: absolute;
+  width: 11.2%;
+  left: 31px;
+  top: 139px;
+}
+#fle{
+  position: absolute;
+  width: 14.5%;
   left: 173px;
-  top: 138px;
+  top: 139px;
+}
+#frs{
+  position: absolute;
+  width: 19.2%;
+  left: 55px;
+  top: 32px;
+}
+#fls{
+  position: absolute;
+  width: 19.4%;
+  left: 136px;
+  top: 22px;
+}
+#frside{
+  position: absolute;
+  width: 21.2%;
+  left: 39px;
+  top: 33px;
+}
+#flside{
+  position: absolute;
+  width: 21%;
+  left: 129px;
+  top: 23px;
+}
+#frc{
+  position: absolute;
+  width: 19.3%;
+  left: 61px;
+  top: 38px;
+}
+#flc{
+  position: absolute;
+  width: 29.6%;
+  left: 93px;
+  top: 30px;
+}
+#frcrotch{
+  position: absolute;
+      width: 17.3%;
+      left: 57px;
+      top: 222px;
+}
+#flcrotch{
+  position: absolute;
+  width: 17.3%;
+  left: 109px;
+  top: 232px;
 }
 #frly{
   position: absolute;
-  width: 28%;
-  left: 48px;
+  width: 24%;
+  left: 49px;
   top: 251px;
 }
 #flly{
   position: absolute;
-  width: 23.3%;
-  left: 127px;
-  top: 287px;
+  width: 18%;
+  left: 118px;
+  top: 295px;
 }
 #frul{
   position: absolute;
-  width: 22.3%;
-  left: 47px;
-  top: 312px;
+  width: 19.6%;
+  left: 49px;
+  top: 242px;
 }
 #flul{
   position: absolute;
-  width: 22.6%;
-  left: 129px;
-  top: 311px;
+      width: 22.6%;
+      left: 113px;
+      top: 242px;
+}
+#frml{
+  position: absolute;
+  width: 17.9%;
+  left: 49px;
+  top: 298px;
+}
+#flml{
+  position: absolute;
+  width: 18.4%;
+  left: 118px;
+  top: 304px;
 }
 #frll{
   position: absolute;
-  width: 21.3%;
-  left: 52px;
-  top: 356px;
+      width: 17.2%;
+      left: 48px;
+      top: 325px;
 }
 #flll{
   position: absolute;
-  width: 20.4%;
-  left: 138px;
-  top: 359px;
+      width: 18%;
+      left: 119px;
+      top: 333px;
+}
+#faly{
+  position: absolute;
+  width: 15.3%;
+  left: 30px;
+  top: 133px;
 }
 #frbprev{
   position: absolute;
@@ -636,6 +1017,141 @@ font-size: 1.3rem;
   left: 186px;
   top: 44px;
 }
+/*BACK*/
+#boso{
+  position: absolute;
+  width: 84%;
+  left: 7px;
+  top: 43px;
+  z-index: 2;
+}
+#blla{
+  position: absolute;
+     width: 10%;
+     left: 8px;
+     top: 145px;
+}
+#brla{
+  position: absolute;
+      width: 16.9%;
+      left: 175px;
+      top: 158px;
+}
+#bleb{
+  position: absolute;
+  width: 11.9%;
+  left: 8px;
+  top: 129px;
+}
+#breb{
+  position: absolute;
+  width: 13.2%;
+  left: 168px;
+  top: 141px;
+}
+#blua{
+  position: absolute;
+  width: 12.8%;
+  left: 14px;
+  top: 81px;
+}
+#brua{
+  position: absolute;
+  width: 18.8%;
+  left: 148px;
+  top: 68px;
+}
+#blsh{
+  position: absolute;
+  width: 17.6%;
+  left: 38px;
+  top: 56px;
+}
+#brsh{
+  position: absolute;
+  width: 17%;
+  left: 116px;
+  top: 54px;
+}
+#back{
+  position: absolute;
+  width: 45%;
+  left: 46px;
+  top: 55px;
+}
+#blly{
+  position: absolute;
+  width: 27.7%;
+  left: 38px;
+  top: 267px;
+}
+#brly{
+  position: absolute;
+  width: 23%;
+  left: 116px;
+  top: 264px;
+}
+#blcr{
+  position: absolute;
+  width: 19.4%;
+  left: 56px;
+  top: 242px;
+}
+#brcr{
+  position: absolute;
+  width: 22%;
+  left: 107px;
+  top: 236px;
+}
+#blul{
+  position: absolute;
+  width: 17%;
+  left: 55px;
+  top: 255px;
+}
+#brul{
+  position: absolute;
+  width: 21%;
+  left: 110px;
+  top: 252px;
+}
+#blml{
+  position: absolute;
+  width: 16.3%;
+  left: 53px;
+  top: 292px;
+}
+#brml{
+  position: absolute;
+  width: 19.2%;
+  left: 114px;
+  top: 294px;
+}
+#blll{
+  position: absolute;
+      width: 26.2%;
+      left: 36px;
+      top: 256px;
+}
+#brll{
+  position: absolute;
+  width: 21.6%;
+  left: 110px;
+  top: 251px;
+}
+#bcol{
+  position: absolute;
+  width: 18%;
+  left: 80px;
+  top: 44px;
+}
+#bins{
+  position: absolute;
+  width: 6%;
+  left: 91px;
+  top: 265px;
+}
+/*BACK*/
 .suit-display{
   box-shadow: -1px 1px 6px rgba(0,0,0, .3);
   position: relative;
@@ -659,6 +1175,15 @@ font-size: 1.3rem;
     .zDex-1{
       z-index: 2 !important;
     }
+    .builder-btns{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+    .suit-display-wrapper{
+    margin: 0 0 -40% 0;
+    }
     .picker-dropdown{
         width: 80%;
     }
@@ -671,14 +1196,14 @@ font-size: 1.3rem;
       margin: 0 0 0 0;
     }
     .build-full{
-      width: 90%;
-      height: 300vh;
+      width: 100%;
+      height: 500vh;
     }
     .suit-display-img{
       margin: 110px 0 0 0;
     }
     .suit-display{
-      min-height: 140vh;
+      min-height: 200vh;
       width: 100%;
       margin: 0 0 0 0;
       flex-direction: column;
@@ -711,13 +1236,15 @@ font-size: 1.3rem;
       margin:-161px 0 0 33px;
     }
     .pop-confirm-wrap{
-      height: 66vh;
+        top:100px;
+        left: 0px;
+        width:100%;
+      height: 100vh;
       position: fixed;
     }
     .price-banner-wrap{
       top: 52px;
       height: 84px;
-
     }
   }
 .front-suit-display-wrap{
