--- a/Alt Designs/one/css.css
+++ b/Alt Designs/one/css.css
@@ -1,4 +1,115 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600');
+.cf-input p{
+    margin: -2px 0 0 0;
+}
+
+.admin-color-control{
+    display:none;
+}
+.popup-confirm-section{
+  position: fixed;
+  top:0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  background: rgba(0,0,0, .7);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#pop-confirm-wrap-p{
+  padding: 10px;
+  margin: -40px 0 0 0;
+  font-size: 1rem;
+}
+.pop-confirm-wrap{
+  position: absolute;
+  top: 20%;
+  left: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 70%;
+  height: 60vh;
+  background: white;
+  z-index: 15;
+  border-radius: 5px;
+}
+#blue-check-mark{
+  transition: all .6s;
+  opacity: 0;
+  position: absolute;
+  top: 55%;
+  left: 45%;
+  width: 80px;
+}
+.pop-confirm-info p{
+  padding: 10px;
+}
+.pop-confirm-btns{
+  display: flex;
+  width: 100%;
+  margin: 70px 0 0 0;
+}
+.cont-edit:hover{
+  font-size: 1rem;
+  background: white;
+  color: black;
+}
+.cont-edit{
+  position: absolute;
+  transition: all .4s;
+  padding: 5px 15px;
+  border: 1px solid rgba(0,0,0, .5);
+  border-radius: 3px;
+  margin: 1.9% 0 0 -5.5% ;
+  background: black;
+  color: white;
+}
+.vid-btn:hover{
+  background: white;
+  color: #50aaed;
+}
+.vid-btn{
+  margin:10px auto 40px;
+  transition: all .4s;
+  width: 35%;
+  text-align: center;
+  color: white;
+  font-size: 1.2rem;
+  border: 2px solid #50aaed;
+  border-radius: 3px;
+  padding: 10px 25px;
+  background: #50aaed;
+}
+.pop-confirm-info h4{
+  font-size: 2rem;
+}
+.pop-confirm-info{
+  padding: 10px;
+}
+#color-picker-colors-back{
+  display: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  width: 95%;
+  height: 100%;
+}
+.measurement-wrap h4{
+    font-size: .8rem;
+}
+.active-black-background{
+  color: white;
+  background: black;
+}
+.active-white-background{
+  color: black;
+  background: white;
+}
+
 main{
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300 !important;
@@ -158,6 +269,7 @@ h1{
   justify-content: center;
   align-items: flex-start;
   width: 95%;
+  padding: 20px 0 0 0 ;
   height: 100%;
 }
 .measurement-set{
@@ -381,6 +493,51 @@ left: -82px;
   left: 20px;
   width: 46%;
 }
+#front-left-elbow{
+  z-index: 5;
+  position: absolute;
+  width: 6.65%;
+  left: 62px;
+  top: 96px;
+}
+#front-right-elbow{
+  z-index: 5;
+      position: absolute;
+      width: 11.4%;
+      left: 279px;
+      top: 110px;
+}
+#back-left-elbow{
+  position: absolute;
+    width: 14.7%;
+    z-index: 6;
+    top: 295px;
+    left: -36px;
+}
+#back-right-elbow{
+  position: absolute;
+  width: 13.5%;
+  z-index: 6;
+  top: 301px;
+  left: 212px;
+}
+.price-banner-wrap h2{
+font-size: 1.3rem;
+}
+.price-banner-wrap{
+  transition: all .8s;
+  position: absolute;
+  left:-350px;
+  top: 60px;
+  width: 26%;
+  height: 40px;
+  background: #50aaed;
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 20px;
+}
 .suit-display-img{
   position: relative;
   display: flex;
@@ -560,9 +717,19 @@ left: -82px;
   justify-content: center;
   align-items: center;
 }
+#back-piping{
+  position: absolute;
+  top: 233px;
+  left: 49px;
+  width: 43.6%;
+  z-index: 6 !important;
+}
   @media screen and (max-width: 780px) {
     .zDex-1{
       z-index: 2 !important;
+    }
+    .picker-dropdown{
+        width: 80%;
     }
     #build-wrapp{
       margin-bottom: 40px;
@@ -602,7 +769,10 @@ left: -82px;
       margin-left: 0 0 0 0;
     }
     .suit-display-back{
-      margin: -200px 0 0 0;
+      margin: -200px 0 0 -246px;
+    }
+    .suit-display-front{
+      margin-left: -246px;
     }
     .suit-display-img img{
       top: -37px;
@@ -618,4 +788,243 @@ left: -82px;
     #fthisfinbackimage{
       margin-left: 21px;
     }
+    .pop-confirm-wrap{
+      height: 66vh;
+      position: fixed;
+    }
+    .price-banner-wrap{
+      top: 52px;
+      height: 84px;
+
+    }
+  }
+  /**/
+  /*LOADER*/
+  .sk-cube-grid {
+    width: 40px;
+    height: 40px;
+    margin: 100px auto;
+  }
+
+  .sk-cube-grid .sk-cube {
+    width: 33%;
+    height: 33%;
+    background-color: #50aaed;
+    float: left;
+    -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+            animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+  }
+  .sk-cube-grid .sk-cube1 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+  .sk-cube-grid .sk-cube2 {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s; }
+  .sk-cube-grid .sk-cube3 {
+    -webkit-animation-delay: 0.4s;
+            animation-delay: 0.4s; }
+  .sk-cube-grid .sk-cube4 {
+    -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s; }
+  .sk-cube-grid .sk-cube5 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+  .sk-cube-grid .sk-cube6 {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s; }
+  .sk-cube-grid .sk-cube7 {
+    -webkit-animation-delay: 0s;
+            animation-delay: 0s; }
+  .sk-cube-grid .sk-cube8 {
+    -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s; }
+  .sk-cube-grid .sk-cube9 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+
+  @-webkit-keyframes sk-cubeGridScaleDelay {
+    0%, 70%, 100% {
+      -webkit-transform: scale3D(1, 1, 1);
+              transform: scale3D(1, 1, 1);
+    } 35% {
+      -webkit-transform: scale3D(0, 0, 1);
+              transform: scale3D(0, 0, 1);
+    }
+  }
+
+  @keyframes sk-cubeGridScaleDelay {
+    0%, 70%, 100% {
+      -webkit-transform: scale3D(1, 1, 1);
+              transform: scale3D(1, 1, 1);
+    } 35% {
+      -webkit-transform: scale3D(0, 0, 1);
+              transform: scale3D(0, 0, 1);
+    }
+  }
+  /**/
+  #payment-load-animation *{
+    opacity: 1 !important;
+  }
+  #payment-load-animation #secure-payment-img{
+    left: 9%;
+    top: -100px;
+  }
+  #thanks-for-choosing{
+    font-size: 1.1rem;
+    margin: 5px;
+  }
+  #loading-payment{
+    position: relative;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: white;
+    z-index: 5000;
+    justify-content: center;
+    align-items: center;
+  }
+  #payment-load-animation p{
+    font-weight: 400;
+    position: absolute;
+    color: #50aaed;
+    left: 20%;
+    margin: 65px 0 0 0;
+  }
+  #payment-load-animation{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 250px;
+    height: 250px;
+    /*background: rgba(0,0,0, .1);*/
+    z-index: 5;
+  }
+  #payment-form-stripe span{
+    color:  #50aaed;
+  }
+  #payment-form-stripe:hover{
+    opacity: 1;
+  }
+  #payment-form-stripe{
+    transition: all .4s;
+    opacity: .6;
+    font-style: italic;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-size: .8rem;
+    color: black;
+  }
+  #payment-headline{
+    padding: 10px;
+    font-size: 1.2rem;
+    position: absolute;
+    top: 20px;
+    color: black;
+  }
+  #payment-confirm{
+    color: #50aaed;
+    font-weight: 400;
+  }
+  #type-confirm{
+    color: #50aaed;
+    font-weight: 400;
+  }
+  #payment-form-exit:hover{
+    background: #50aaed;
+    color: white;
+  }
+  #payment-form-exit{
+    transition: all .4s;
+    border-radius: 3px;
+    color: #50aaed;
+    font-weight: 400;
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    padding: 3px 10px 5px 10px;
+    background: white;
+  }
+  #payment-form{
+    position: absolute;
+    width: 100%;
+    margin: -20px 0 0 0;
+  }
+  #secure-payment-img-in{
+    width: 50px;
+  }
+  #secure-payment-img{
+    opacity: .6;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+  }
+  #stripe-form-shade{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0, .5);
+    height: 100%;
+    width: 100%;
+  }
+  #stripe-form{
+    z-index: 4000;
+    position: fixed;
+    width: 94%;
+    border-radius: 5px;
+    border: 2px solid #50aaed;
+    left: 3%;
+    top: 25%;
+    height: 300px;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: none;
+  }
+  #payment-form button:hover{
+    color:  #50aaed;
+    background: white;
+  }
+  #payment-form button{
+    transition: all .4s;
+    margin: 10px;
+    padding: 10px 15px;
+    border: 2px solid #50aaed;
+    background:  #50aaed;
+    color: white;
+  }
+
+  .StripeElement {
+    background-color: white;
+    padding: 8px 12px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+  }
+
+  .StripeElement--focus {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+  }
+
+  .StripeElement--invalid {
+    border-color: #fa755a;
+  }
+
+  .StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
   }
