--- a/Alt Designs/TANDEM SHORTS 1 /css.css
+++ b/Alt Designs/TANDEM SHORTS 1 /css.css
@@ -1,8 +1,56 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600');
+@import url('https://fonts.googleapis.com/css?family=Audiowide');
 .cf-input p{
     margin: -2px 0 0 0;
 }
-
+#chute-out-box span{
+  font-size: .4rem;
+  margin: 1px 0 0 0;
+}
+#chute-out-box{
+  font-family: 'audiowide';
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+      z-index: 5;
+      top: 80px;
+      left: 93px;
+      width: 18%;
+}
+#chute-out-logo{
+  width: 60%;
+  margin: 0 0 2px 0;
+}
+#caos-leg-logo{
+  font-size: .7rem;
+  font-family: 'audiowide';
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+  bottom: 213px;
+  left: 145px;
+  width: 20%;
+  transform: rotate(-9deg);
+}
+#caos-arm-logo{
+  font-size: .7rem;
+  font-family: 'audiowide';
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 5;
+  bottom: 283px;
+  left: 194px;
+  width: 20%;
+  transform: rotate(69deg);
+}
 .admin-color-control{
     display:none;
 }
@@ -47,12 +95,11 @@
 }
 .pop-confirm-info p{
   padding: 10px;
-  font-size: 1rem;
 }
 .pop-confirm-btns{
   display: flex;
   width: 100%;
-  margin: 110px 0 0 0;
+  margin: 70px 0 0 0;
 }
 .cont-edit:hover{
   font-size: 1rem;
@@ -331,7 +378,7 @@ h1{
   transition: all .4s;
 }
 .color-single-display{
-  width: 15px;
+  min-width: 15px;
   height: 15px;
   margin: 0 0 0 5px;
   border: 1px solid rgba(0,0,0, .3);
@@ -349,7 +396,8 @@ h1{
 
 
 .price-banner-wrap h2{
-font-size: 1.3rem;
+  font-size: 2.5rem;
+  margin: 10px -5px;
 }
 .price-banner-wrap{
   transition: all .8s;
@@ -360,7 +408,7 @@ font-size: 1.3rem;
   height: 40px;
   background: #50aaed;
   color: white;
-  display: none;
+  display: flex;
   justify-content: flex-end;
   align-items: center;
   padding: 10px 20px;
@@ -508,6 +556,7 @@ font-size: 1.3rem;
 }
 #down-chevron{
   min-width: 10px;
+  max-width: 10px;
   margin: 0 0 0 20%;
 }
 #front-suit-display{
@@ -519,122 +568,220 @@ font-size: 1.3rem;
   align-items: flex-end;
 }
 /*SVG FRONT IMAGE COLLECTION*/
-/*SVG images for suit*/
 #front-lineing{
-  z-index: 1;
+  width: 77%;
   position: absolute;
-  width: 80%;
-  left: 10px;
-  top: 10px;
-}
-#front-pipeing{
   z-index: 2;
-  position: absolute;
-  width: 41%;
-  left: 68px;
-  top: 31px;
+  top: 90px;
+  left: 38px;
 }
-#fc{
+#back-lineing{
+  top: 90px;
+  left: 30px;
+  width: 75%;
   position: absolute;
-  width: 21%;
-  left: 101px;
-  top: 13px;
+  z-index: 2;
 }
-#frla{
+#cuff2{
+  top: 91px;
+  left: 34px;
+  width: 71.8%;
   position: absolute;
-  width: 20%;
-  left: 12px;
-  top: 137px;
+  z-index: 3;
 }
-#frs{
+#cuff1{
+  top: 92px;
+  left: 41px;
+  width: 74%;
   position: absolute;
-  width: 10.6%;
-  left: 40px;
-  top: 65px;
-}
-#frside{
-  position: absolute;
-  width: 19.7%;
-  left: 54px;
-  top: 33px;
-}
-#frc{
-  position: absolute;
-  width: 24.2%;
-  left: 50px;
-  top: 37px;
-}
-#flc{
-  position: absolute;
-  width: 35.3%;
-  left: 96px;
-  top: 31px;
-}
-#flside{
-  position: absolute;
-  width: 18.5%;
-  left: 145px;
-  top: 22px;
-}
-#fls{
-  position: absolute;
-  width: 13%;
-  left: 165px;
-  top: 45px;
-}
-#flla{
-  position: absolute;
-  width: 14%;
-  left: 173px;
-  top: 138px;
-}
-#frly{
-  position: absolute;
-  width: 28%;
-  left: 48px;
-  top: 251px;
-}
-#flly{
-  position: absolute;
-  width: 23.3%;
-  left: 127px;
-  top: 287px;
+  z-index: 3;
 }
 #frul{
+  width: 34.8%;
   position: absolute;
-  width: 22.3%;
-  left: 47px;
-  top: 312px;
+  top: 118px;
+  left: 49px;
 }
 #flul{
+  width: 44%;
   position: absolute;
-  width: 22.6%;
-  left: 129px;
-  top: 311px;
+  top: 119px;
+  left: 118px;
+}
+#frcl{
+  width: 36%;
+  position: absolute;
+  top: 201px;
+  left: 46px;
+}
+#flcl{
+  width: 37%;
+  position: absolute;
+  top: 204px;
+  left: 137px;
+}
+#frml{
+  width: 35.5%;
+  position: absolute;
+  top: 230px;
+  left: 40px;
+}
+#flml{
+  width: 35.5%;
+  position: absolute;
+  top: 229px;
+  left: 141px;
+}
+#frly{
+  width: 30.2%;
+  position: absolute;
+  top: 325px;
+  left: 38px;
+}
+#flly{
+  width: 30%;
+  position: absolute;
+  top: 324px;
+  left: 154px;
 }
 #frll{
+  width: 31%;
   position: absolute;
-  width: 21.3%;
-  left: 52px;
-  top: 356px;
+  top: 302px;
+  left: 39px;
 }
 #flll{
+  width: 30.9%;
   position: absolute;
-  width: 20.4%;
-  left: 138px;
-  top: 359px;
+  top: 299px;
+  left: 151px;
 }
-#frbprev{
+#br{
+  width: 36.5%;
   position: absolute;
-  width: 5.6%;
-  left: 54px;
-  top: 135px;
+  top: 118px;
+  left: 123px;
 }
-#flbprev{
+#bl{
+  width: 33.6%;
   position: absolute;
-  width: 9.2%;
-  left: 186px;
+  top: 118px;
+  left: 41px;
+}
+#brc{
+  width: 35%;
+  position: absolute;
+  top: 127px;
+  left: 31px;
+}
+#blc{
+  width: 32%;
+  position: absolute;
+  top: 122px;
+  left: 128px;
+}
+#brml{
+  width: 32.4%;
+  position: absolute;
+  top: 153px;
+  left: 30px;
+}
+#blml{
+  width: 32.4%;
+  position: absolute;
+  top: 151px;
+  left: 134px;
+}
+#brly{
+  width: 38.8%;
+  position: absolute;
+  top: 164px;
+  left: 119px;
+}
+#blly{
+  width: 29.4%;
+  position: absolute;
+  top: 220px;
+  left: 31px;
+}
+#brll{
+  width: 38%;
+  position: absolute;
+  top: 198px;
+  left: 30px;
+}
+#blll{
+  width: 36.5%;
+  position: absolute;
+  top: 200px;
+  left: 126px;
+}
+/*SVG BACK IMAGE COLLECTION*/
+#back-collar{
+  width: 17.3%;
+  position: absolute;
   top: 44px;
+  left: 79px;
+}
+#back-body{
+  width: 48.6%;
+  position: absolute;
+  top: 57px;
+  left: 39px;
+}
+#back-left-arm-griper{
+  width: 8.6%;
+  position: absolute;
+  top: 91px;
+  left: 12px;
+}
+#back-right-arm-griper{
+  width: 9.5%;
+  position: absolute;
+  top: 84px;
+  left: 168px;
+}
+#back-left-upper-arm{
+  width: 19%;
+  position: absolute;
+  top: 90px;
+  left: 3px;
+}
+#back-right-upper-arm{
+  width: 20%;
+  position: absolute;
+  top: 84px;
+  left: 153px;
+}
+#back-left-lower-arm{
+  width: 11.5%;
+      position: absolute;
+      top: 162px;
+      left: 2px;
+}
+#back-right-lower-arm{
+  width: 12.5%;
+  position: absolute;
+  top: 151px;
+  left: 179px;
+}
+#back-legs{
+  width: 49.5%;
+  position: absolute;
+  top: 175px;
+  left: 38px;
+}
+#back-leg-grippers{
+  width: 50.8%;
+  position: absolute;
+  top: 283px;
+  left: 43px;
+}
+#back-hips{
+  width: 41.8%;
+  position: absolute;
+  top: 180px;
+  left: 53px;
 }
 .suit-display{
   box-shadow: -1px 1px 6px rgba(0,0,0, .3);
@@ -659,6 +806,12 @@ font-size: 1.3rem;
     .zDex-1{
       z-index: 2 !important;
     }
+    .builder-btns{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
     .picker-dropdown{
         width: 80%;
     }
@@ -671,14 +824,14 @@ font-size: 1.3rem;
       margin: 0 0 0 0;
     }
     .build-full{
-      width: 90%;
-      height: 300vh;
+      width: 100%;
+      height: 500vh;
     }
     .suit-display-img{
       margin: 110px 0 0 0;
     }
     .suit-display{
-      min-height: 140vh;
+      min-height: 200vh;
       width: 100%;
       margin: 0 0 0 0;
       flex-direction: column;
@@ -711,15 +864,258 @@ font-size: 1.3rem;
       margin:-161px 0 0 33px;
     }
     .pop-confirm-wrap{
-      height: 66vh;
+      display: none;
+        top:100px;
+        left: 0px;
+        width:100%;
+      height: 100vh;
       position: fixed;
+    }
+    .price-banner-wrap{
+      font-size: 1.3rem;
     }
     .price-banner-wrap{
       top: 52px;
       height: 84px;
 
     }
+    #front-suit-display{
+        margin: 40px 0 0 0;
+    }
   }
 .front-suit-display-wrap{
   border: 1px solid black;
+}
+/**/
+/*STRIPE*/
+/**/
+/**/
+/*LOADER*/
+.sk-cube-grid {
+  width: 40px;
+  height: 40px;
+  margin: 100px auto;
+}
+
+.sk-cube-grid .sk-cube {
+  width: 33%;
+  height: 33%;
+  background-color: #50aaed;
+  float: left;
+  -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+}
+.sk-cube-grid .sk-cube1 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube2 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube3 {
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s; }
+.sk-cube-grid .sk-cube4 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube5 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+.sk-cube-grid .sk-cube6 {
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+.sk-cube-grid .sk-cube7 {
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s; }
+.sk-cube-grid .sk-cube8 {
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+.sk-cube-grid .sk-cube9 {
+  -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  }
+}
+
+@keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+  } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+  }
+}
+/**/
+#payment-load-animation *{
+  opacity: 1 !important;
+}
+#payment-load-animation #secure-payment-img{
+  left: 9%;
+  top: -100px;
+}
+#thanks-for-choosing{
+  font-size: 1.1rem;
+  margin: 5px;
+}
+#loading-payment{
+  position: relative;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: white;
+  z-index: 5000;
+  justify-content: center;
+  align-items: center;
+}
+#payment-load-animation p{
+  font-weight: 400;
+  position: absolute;
+  color: #50aaed;
+  left: 20%;
+  margin: 65px 0 0 0;
+}
+#payment-load-animation{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 250px;
+  height: 250px;
+  /*background: rgba(0,0,0, .1);*/
+  z-index: 5;
+}
+#payment-form-stripe span{
+  color:  #50aaed;
+}
+#payment-form-stripe:hover{
+  opacity: 1;
+}
+#payment-form-stripe{
+  transition: all .4s;
+  opacity: .6;
+  font-style: italic;
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  font-size: .8rem;
+  color: black;
+}
+#payment-headline{
+  padding: 10px;
+  font-size: 1.2rem;
+  position: absolute;
+  top: 20px;
+  color: black;
+}
+#payment-confirm{
+  color: #50aaed;
+  font-weight: 400;
+}
+#type-confirm{
+  color: #50aaed;
+  font-weight: 400;
+}
+#payment-form-exit:hover{
+  background: #50aaed;
+  color: white;
+}
+#payment-form-exit{
+  transition: all .4s;
+  border-radius: 3px;
+  color: #50aaed;
+  font-weight: 400;
+  position: absolute;
+  top: 2px;
+  right: 2px;
+  padding: 3px 10px 5px 10px;
+  background: white;
+}
+#payment-form{
+  position: absolute;
+  width: 100%;
+  margin: -20px 0 0 0;
+}
+#secure-payment-img-in{
+  width: 50px;
+}
+#secure-payment-img{
+  opacity: .6;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+}
+#stripe-form-shade{
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0, .5);
+  height: 100%;
+  width: 100%;
+}
+#stripe-form{
+  z-index: 4000;
+  position: fixed;
+  width: 94%;
+  border-radius: 5px;
+  border: 2px solid #50aaed;
+  left: 3%;
+  top: 25%;
+  height: 300px;
+  background: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+#payment-form button:hover{
+  color:  #50aaed;
+  background: white;
+}
+#payment-form button{
+  transition: all .4s;
+  margin: 10px;
+  padding: 10px 15px;
+  border: 2px solid #50aaed;
+  background:  #50aaed;
+  color: white;
+}
+
+.StripeElement {
+  background-color: white;
+  padding: 8px 12px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
 }
